Added winning message if you match all images and pictures shows

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <button id="newGame" class="button">New Game</button>
     </fieldset>
-
+    <div id="winnerHolder"></div>
     <div id="game">
     </div>
 
