Added competitive mode
That is the mode where you have some time to solve the game and it prints time used to solve the game at the end if you won

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 <input type="radio" name="radios" id="fourthRadio" value="30" ratio="5">
                 <label for="fourthRadio">5 x 6</label>
             </div>
+            <div class="choice">
+                <input type="checkbox" name="competitive" id="cbxCompetitive">
+                <label for="cbxCompetitive">Competitive mode?</label>
+            </div>
             <!--
             <button onclick="open90()">first click</button>
             <button onclick="openAnother90()">second click</button>
